appId: ${APP_ID}
name: Drawer - Master Detail
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: drawer-master-detail
      TEXT: 'Pages'
- tapOn:
    text: 'Feed'
- assertVisible:
    text: 'Feed'
- runFlow:
    when:
      notVisible: 'Albums'
    commands:
      - tapOn:
          text: 'Go back'
- tapOn:
    text: 'Albums'
- assertVisible:
    text: 'Albums'
- runFlow:
    when:
      notVisible: 'Article'
    commands:
      - tapOn:
          text: 'Go back'
- tapOn:
    text: 'Article'
- assertVisible:
    text: 'Article'
